# projet-semestre

./: DESIGN.md  bats.py  benchmarks.py  camera.py  constants.py  gameview.py  gate.py  main.py  map.py  player.py  profile_stats.me  profile_stats.prof  pyproject.toml  slimes.py  spinner.py  textures.py  weapon.py
maps/: map1.txt
tests/: conftest.py  test_bats.py  test_boomerang.py  test_game.py  test_gate.py  test_map.py  test_map_loading.py  test_slimes.py  test_weapon.py
