[project]
name = "projet-semestre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arcade>=3.0.2",
    "networkx>=3.6.1",
    "types-networkx>=3.6.1.20260402",
]
[tool.ruff.lint]
select = ["ANN"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
]
